--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title> duoludo </title>
+<title> Cap'n Proto for Rust </title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
