--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title> Cap'n Proto for Rust </title>
+<title> {{page.title}} </title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+<link rel="stylesheet" href="{{site.baseurl}}/css/main.css" type="text/css" />
 </head>
 <body>
 {{content}}
