--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,3 +16,8 @@ layout: default
  </a>
 </div>
 
+<a href="http://feeds.feedburner.com/CapnProtoForRust">
+<img src="{{site.baseurl}}/assets/rss.png"
+     width="14"/>
+</a>
+
