--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
  </a>
 </div>
 
-<a href="http://feeds.feedburner.com/CapnProtoForRust">
+<a href="{{site.baseurl}}/feed.xml">
 <img src="{{site.baseurl}}/assets/rss.png"
      width="14"/>
 </a>
