--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,16 @@
 layout: default
 ---
 
+
+<p>
+{{ page.date | date_to_string }}
+<p>
+
 {{content}}
+
+<p class="author">
+  -- posted by <a href="https://github.com/{{ page.author }}">{{ page.author }}</a>
+</p>
 
 <div>
  <a href="https://www.github.com/dwrensha/capnproto-rust">
